@@ -77,7 +77,7 @@
 					<div class="summary" itemprop="description">
 						{{ view.subtitle }}
 					</div>
-					{%- set byline = view.context | get_byline %}
+					{%- set byline = view.context | get_byline('article') %}
 					{% if byline | length -%}
 					<div class="byline" itemscope itemtype="http://schema.org/Person" itemprop="author">
 						{% include 'zeit.web.site:templates/inc/meta/byline.tpl' %}
